<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="app_name">GeoLocateAndLearn</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Geo Locate and Learn</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_me">MeActivity</string>
    <string name="title_activity_nearby">NearbyActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="preferences">Preferences</string>
    <string name="app_id">518620884845095</string>
    <string name="about_content">Pearson English Learn and Go is a location-aware
		mobile application,
		designed to supplement formal learning in language schools around the world.
		It provides genuine immersion in the life and culture of
		English-speaking cities in which students study,
		by locating points of interest in the immediate vicinity of the learner,
		then setting fun challenges which learners will encounter in everyday
		authentic scenarios.
		Alternatively, students in any location can choose from a range of challenges
		suitable for practice with their peers, in or out of class.
		Information on points of interest is drawn from the Dorling Kindersley
		Eyewitness Guide series.
		Challenge content has been created by Pearson English, with dictionary
		definitions from the Longman Dictionary of Contemporary English.
		Developers: Adam, Abhinav, Dean, Jacqueline, Nathan, Steve.
		Event: Pan Pearson Hackathon 2013.
</string>
    <string name="about_content_alert_dialog">Pearson English Learn and Go is a location-aware mobile application, designed to supplement formal learning in language schools around the world. It provides genuine immersion in the life and culture of English-speaking cities in which students study, by locating points of interest in the immediate vicinity of the learner, then setting fun challenges which learners will encounter in everyday authentic scenarios. Alternatively, students in any location can choose from a range of challenges suitable for practice with their peers, in or out of class. Information on points of interest is drawn from the Dorling Kindersley Eyewitness Guide series. Challenge content has been created by Pearson English, with dictionary definitions from the Longman Dictionary of Contemporary English.\n\nOriginally created for the Pan Pearson Hackathon: 2013.
</string>
    <string name="title_activity_locations">LocationsActivity</string>
    <string name="title_activity_london">LondonActivity</string>
    <string name="title_activity_new_york">NewYorkActivity</string>
    <string name="title_activity_borough_market">BoroughMarketActivity</string>
    <string name="title_activity_borough_market_compass">BoroughMarketCompassActivity</string>
    <string name="title_activity_castle">CastleActivity</string>
    <string name="title_activity_castle_compass">CastleCompassActivity</string>
    <string name="title_activity_geo_track">GeoTrackActivity</string>
    <string name="reset">Reset</string>
    <string name="reset_skills">Reset Skills</string>
    <string name="practice_challenges">Practice Challenges</string>
    <string name="practice_challenges_instructions">1. Select the skills you\&apos;d like to
		practice.\n2. Choose a challenge to complete together.</string>
    <string name="perform_practice_challenge">Perform Practice Challenge</string>
    <string name="submit">Submit</string>
    <string name="submit_challenge_response">Submit Challenge Response</string>
    <string name="share_this_challenge">Share this challenge</string>
    <string name="take_pictures_or_record_some_key_phrases">Take pictures, or record some key phrases</string>
    <string name="rate_this_challenge">Rate this challenge</string>
    <string name="fun">Fun</string>
    <string name="education_value">Education value</string>
    <string name="difficulty">Difficulty</string>
    <string name="nearby">Nearby</string>
    <string name="practice">Practice</string>
    <string name="about">About</string>
    <string name="me">Me</string>
    <string name="credits">Credits</string>
    <string name="project_team">Project Team</string>
    <string name="project_team_names">Abhinav Mehrotra\nAdam Webb\nDean
		Kitchen\nJacqueline Cheng\nNathan Harris\nSteven Schwartz</string>
    <string name="ok">OK</string>

    <string-array name="geolocation_source_choices">
        <item>Actual current location</item>
        <item>London</item>
        <item>New York</item>
        <item>Sydney</item>
    </string-array>
    <string-array name="geolocation_source_values">
        <item>ACTUAL</item>
        <item>LONDON</item>
        <item>NEW_YORK</item>
        <item>SYDNEY</item>
    </string-array>

    <string name="geolocation_source_values_default">actual</string>
    <string name="nearby_points_of_interest">Nearby Points of Interest</string>
    <string name="output_area">Output area</string>
    <string name="ellipsis">&#8230;</string>
    <string name="submit_answers">Submit answers</string>
    <string name="record_challenge">Record challenge</string>
    <string name="not_implemented_bang">Not implemented!</string>
    <string name="application_logo">Application Logo</string>

</resources>