<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/question1"
            style="@style/formQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ellipsis" />

        <EditText
            android:id="@+id/answer1"
            style="@style/formText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3" />

        <TextView
            android:id="@+id/question2"
            style="@style/formQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ellipsis" />

        <EditText
            android:id="@+id/answer2"
            style="@style/formText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3" />

        <TextView
            android:id="@+id/question3"
            style="@style/formQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ellipsis" />

        <EditText
            android:id="@+id/answer3"
            style="@style/formText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/submit_answers"
                android:onClick="submitAnswers"
                android:paddingRight="10dp"
                android:src="@drawable/ic_submit" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/record_challenge"
                android:onClick="recordChallenge"
                android:paddingLeft="10dp"
                android:src="@drawable/ic_record_challenge" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>